main_elb.tf
# Specify the provider and access details
provider "aws" {
  region = "${var.aws_region}"
}

data "aws_availability_zones" "available" {}


###=================================================== VPC ========================================###
# New VPC for env
resource "aws_vpc" "main" {
##  "10.10.0.0/16"
  cidr_block ="${var.vpc_cidr}" 
  enable_dns_hostnames = true
  tags {
    Name = "${var.short_name}-vpc"
  }
}
resource "aws_subnet" "main" {
  count             = "${var.az_count}"
  cidr_block        = "${cidrsubnet(aws_vpc.main.cidr_block, 3, count.index)}"
  availability_zone = "${data.aws_availability_zones.available.names[count.index]}"
  vpc_id            = "${aws_vpc.main.id}"
  map_public_ip_on_launch = "${var.map_public_ip}"
}

resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.main.id}"
}

resource "aws_route_table" "r" {
  vpc_id = "${aws_vpc.main.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.gw.id}"
  }
}

resource "aws_route_table_association" "a" {
  count          = "${var.az_count}"
  subnet_id      = "${element(aws_subnet.main.*.id, count.index)}"
  route_table_id = "${aws_route_table.r.id}"
}

###=================================================== ELB ========================================###

resource "aws_elb" "web" {
  
  name = "${var.short_name}-elb"
  # The same availability zone as our instance
##  availability_zones = ["${aws_instance.web.*.availability_zone}"]
  security_groups    = ["${aws_security_group.elb.id}"]
  subnets         = ["${aws_subnet.main.*.id}"]
##  subnets         = "${element(aws_subnet.main.*.id, count.index)}"  
  listener {
    instance_port     = 80
    instance_protocol = "http"
    lb_port           = 80
    lb_protocol       = "http"
  }

  health_check {
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 3
    target              = "HTTP:80/"
    interval            = 30
  }

  # The instance is registered automatically
 ##################### instances = ["${aws_instance.web.id}"]

  cross_zone_load_balancing   = true
  idle_timeout                = 400
  connection_draining         = true
  connection_draining_timeout = 400
}

resource "aws_lb_cookie_stickiness_policy" "default" {
  name                     = "lbpolicy"
  load_balancer            = "${aws_elb.web.id}"
  lb_port                  = 80
  cookie_expiration_period = 600
}

resource "aws_instance" "web" {
  instance_type = "${var.instance_type}"

  # Lookup the correct AMI based on the region
  # we specified
  ami = "${lookup(var.aws_amis, var.aws_region)}"
  subnet_id = "${aws_subnet.main.0.id}"
  # The name of our SSH keypair you've created and downloaded
  # from the AWS console.
  #
  # https://console.aws.amazon.com/ec2/v2/home?region=us-west-2#KeyPairs:
  #
  key_name = "${var.key_name}"

  # Our Security group to allow HTTP and SSH access
#########################  security_groups = ["${aws_security_group.default.name}"]
  user_data = "${file("userdata_elb.sh")}"

  #Instance tags
  tags {
    Name = "Vgordey_elb"
  }
}


###=================================================== ASG ========================================###

resource "aws_autoscaling_group" "app" {
  name                 = "vlad-gordey-asg"
  vpc_zone_identifier  = ["${aws_subnet.main.*.id}"]
  min_size             = "${var.asg_min}"
  max_size             = "${var.asg_max}"
  desired_capacity     = "${var.asg_desired}"
  launch_configuration = "${aws_launch_configuration.gordey_lc.name}"
  load_balancers       = ["${aws_elb.web.id}"]  
}

resource "aws_launch_configuration" "gordey_lc" {
  name          = "gordey-lc"
  image_id      = "ami-5b31fd34"
  instance_type = "${var.instance_type}"

  # Security group
  security_groups = ["${aws_security_group.elb.id}"]
}



###=================================================== Secirity Groups ========================================###

# Our default security group to access
# the instances over SSH and HTTP
resource "aws_security_group" "default" {
  name        = "SG for instance"
  description = "Used in the terraform"
  vpc_id = "${aws_vpc.main.id}"

  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP access from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Our elb security group to access
# the ELB over HTTP
resource "aws_security_group" "elb" {
  vpc_id = "${aws_vpc.main.id}"
  name   = "SG for LB"
  description = "Used in the terraform"

  # HTTP access from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  # HTTPS access from anywhere
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
